<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layoutDirection="ltr"

    android:layout_height="match_parent"
    android:background="#151414"
    tools:context=".Activities.Auth.LoginTojcartoon">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/logoapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAllCaps="true"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:textStyle="bold" />

      <LinearLayout
          android:id="@+id/email_li"
          android:layout_alignParentStart="true"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:layout_below="@id/logoapp"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <LinearLayout
              android:gravity="start"
              android:layout_above="@+id/editcomment"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

              <TextView
                  android:id="@+id/comments_counter"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="7dp"
                  android:layout_marginEnd="7dp"
                  android:fontFamily="@font/poppins_regular"
                  android:text="@string/Email"
                  android:textColor="@color/white"
                  android:textSize="12dp" />


          </LinearLayout>
          <EditText
              android:id="@+id/emailedit"
              android:layout_width="match_parent"
              android:layout_height="50dp"
              android:layout_below="@+id/le_burn"
              android:layout_marginStart="6dp"
              android:layout_marginTop="10dp"
              android:layout_centerHorizontal="true"
              android:maxLength="50"
              android:maxHeight="50dp"
              android:maxLines="1"
              android:lines="1"
              android:ellipsize="end"
              android:inputType="text"
              android:layout_marginEnd="6dp"
              android:layout_marginBottom="6dp"
              android:layout_toStartOf="@+id/imageButton"
              android:background="@drawable/editbglogin"
              android:fontFamily="@font/poppins_regular"
              android:hint="jcartoon@gmail.com"
              android:padding="13dp"
              android:textColor="@color/white"
              android:textColorHint="@color/white"
              android:textSize="12dp" />


      </LinearLayout>
      <LinearLayout
          android:id="@+id/pass_li"
          android:layout_marginTop="8dp"
          android:layout_alignParentStart="true"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:layout_below="@id/email_li"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <LinearLayout
              android:gravity="start"
              android:id="@+id/allre"
              android:layout_above="@+id/editcomment"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_toEndOf="@id/back"
                  android:layout_marginStart="8dp"
                  android:layout_marginEnd="8dp"
                  android:fontFamily="@font/poppins_regular"
                  android:text="@string/Password"
                  android:textColor="@color/white"
                  android:textSize="12dp" />


          </LinearLayout>
          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content">


              <com.google.android.material.textfield.TextInputLayout
                  app:passwordToggleEnabled="true"
                  app:passwordToggleTint="@color/white"
                  android:layout_width="match_parent"
                  android:maxLength="50"
                  android:maxHeight="50dp"
                  android:maxLines="1"
                  android:lines="1"
                  android:singleLine="true"
                  android:inputType="textPassword"
                  android:layout_height="wrap_content">

                  <com.google.android.material.textfield.TextInputEditText
                      android:id="@+id/passedit"
                      android:maxLength="50"
                      android:maxHeight="50dp"
                      android:maxLines="1"
                      android:lines="1"
                      android:singleLine="true"
                      android:layout_width="match_parent"
                      android:layout_height="50dp"
                      android:layout_below="@+id/le_burn"
                      android:layout_marginStart="6dp"
                      android:layout_marginTop="10dp"
                      android:layout_centerHorizontal="true"
                      android:layout_marginEnd="6dp"
                      android:layout_marginBottom="6dp"
                      android:background="@drawable/editbglogin"
                      android:fontFamily="@font/poppins_regular"
                      android:padding="13dp"
                      android:textColor="@color/white"
                      android:textColorHint="@color/white"
                      android:textSize="12dp" />



              </com.google.android.material.textfield.TextInputLayout>

          </RelativeLayout>


      </LinearLayout>


        <RelativeLayout
            android:layout_below="@id/pass_li"
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"                android:background="@drawable/btnloginbg"
            android:foreground="@drawable/click_animation_round">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/LOGIN"
                android:textColor="@color/black"
                android:textSize="13dp"
                android:textStyle="bold" />



        </RelativeLayout>


        <RelativeLayout
            android:layout_below="@+id/loginbtn"
            android:padding="10dp"
            android:layout_gravity="top"
            android:id="@+id/rl_bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:visibility="visible">

            <ImageView
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:background="#151414"
                    android:id="@+id/comicsissue"
                    android:padding="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/OR"
                    android:textColor="@color/white"
                    android:textSize="12dp" />

            </LinearLayout>




        </RelativeLayout>




            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/logingoogle"
                android:layout_below="@id/rl_bottom_bar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"                android:background="@drawable/btnloginbg"
                android:foreground="@drawable/click_animation_round">


                <TextView
                    android:id="@+id/gogltt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/arabic_kufi"
                    android:text="LOGIN WITH "
                    android:textColor="@color/black"
                    android:textSize="13dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_toEndOf="@+id/gogltt"
                    android:src="@drawable/searchgo" />

            </RelativeLayout>
            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/lgoinfacebook"
                android:layout_marginTop="20dp"
                android:layout_below="@id/logingoogle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"                android:background="@drawable/btnloginbg"
                android:foreground="@drawable/click_animation_round">


                <TextView
                    android:id="@+id/fxtxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/arabic_kufi"
                    android:text="LOGIN WITH "
                    android:textColor="@color/black"
                    android:textSize="13dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_toEndOf="@+id/fxtxt"
                    android:src="@drawable/facebook" />

            </RelativeLayout>
            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/lgointwitter"
                android:layout_marginTop="20dp"
                android:layout_below="@id/lgoinfacebook"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"                android:background="@drawable/btnloginbg"
                android:foreground="@drawable/click_animation_round">


                <TextView
                    android:id="@+id/tctoo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/arabic_kufi"
                    android:text="تسجيل الدخول بواسطة"
                    android:textColor="@color/black"
                    android:textSize="13dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_toStartOf="@+id/tctoo"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/twitter" />

            </RelativeLayout>

        <TextView
            android:layout_marginBottom="60dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/lgoinfacebook"
            android:id="@+id/gotosignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/makeone"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="12dp" />




    </RelativeLayout>



</ScrollView>